fix page shifting (#19)

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ small {font-size: 0.8em;}
 .backlink__preview {
     display: none;
     
-    position: relative;
+    position: absolute;
     background-color: #fff;
     border-radius: 4px;
     padding: 4px;
